<?xml version="1.0" encoding="utf-8"?>
<!--Basic Linear layout with edit boxes to provide user to fill out the form.
These will be used later to extract the information inside and store into DB-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_fname"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="text"
        tools:ignore="Autofill"/>

    <EditText
        android:id="@+id/lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_lname"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="text"
        tools:ignore="Autofill"/>

    <TextView
        android:id="@+id/dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_dob"
        android:background="?attr/editTextBackground"
        android:textColor="?attr/editTextColor"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        tools:ignore="Autofill"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:hint="@string/prompt_password"
        android:imeActionId="6"
        android:imeActionLabel="@string/sign_in_hint"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        tools:ignore="Autofill"/>

    <Button
        android:id="@+id/submitRegisration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/RegisterSubmit" />

</LinearLayout>

    <!--
    Resources
    https://developer.android.com/reference/android/support/design/widget/TextInputLayout
    -->