<?xml version="1.0" encoding="utf-8"?>
<!--Slightly different set up that allows multiple selections to be made.
WE use checkBoxes but change their appearance to appear like radio buttons.
This allows us to continue our UI flow without breaking the style.
Much simpler to implement over individual radiogroups with 1 radiobutton.
Had a tough time trying to uncheck a radiobutton-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--TextView Header-->
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Q5_description"
        android:textSize="35sp" />

    <!--Option 1-->
    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Q5_option1"
        android:layout_below="@id/textTitle"
        android:layout_marginTop="170dp"
        android:textSize="35sp"
        style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"/>

    <!--Option2-->
    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Q5_option2"
        android:textSize="35sp"
        android:layout_below="@+id/checkBox1"
        style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"/>

    <!--Option3-->
    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Q5_option3"
        android:textSize="35sp"
        android:layout_below="@+id/checkBox2"
        style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"/>

    <!--Confirm button-->
    <Button
        android:id="@+id/btnConfirm5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/Confirm" />

</RelativeLayout>