<?xml version="1.0" encoding="utf-8"?>
<!--Simple 3 button UI that allows the user to view their history, rules or start quiz-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--Header Button-->
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar"
        android:layout_marginTop="80dp"
        android:text="@string/card_game_subtitle"
        android:layout_centerHorizontal="true"
        android:textSize="25sp" />
    <!--Start Button-->
    <Button
        android:id="@+id/btnNavStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/Start" />
    <!--History Button-->
    <Button
        android:id="@+id/btnNavHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/history" />
    <!--Rules Button-->
    <Button
        android:id="@+id/btnNavRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Rules" />

</RelativeLayout>